--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </div>
 
         <div class="actions-redirect">
-            Click <a href="https://ronard-addo.github.io/ims-menu/">here</a> to view a list of actions available on this website
+            <!--Click <a href="https://ronard-addo.github.io/ims-menu/">here</a> to view a list of actions available on this website-->
+            Click <a href="menu.html">here</a> to view a list of actions available on this website
         </div>
 
         <div class="testimonials">
