--- a/menu.html
+++ b/menu.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Menu</title>
     <link rel="stylesheet" href="styles.css">
-    <!--<script src="https://cdn.sheetjs.com/xlsx/package/dist/xlsx.full.min.js"></script>-->
-    
-<!--<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>-->
+    <script type="module" src="config.js"></script>
 
 </head>
 <body>
