--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
     <header class="main-header">
         <div class="header-content">
             <h1>Inventory Management System</h1>
-            <p>Track and manage your product inventory</p>
+            <p>Track and manage your business' inventory</p>
         </div>
     </header>
 
