--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Menu</title>
     <link rel="stylesheet" href="styles.css">
+    <!--<script src="https://cdn.sheetjs.com/xlsx/package/dist/xlsx.full.min.js"></script>-->
+    
+<!--<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>-->
 
 </head>
 <body>
     <header class="main-header">
         <div class="header-content">
             <h1>Inventory Management System</h1>
-            <p>Track and manage your business' inventory</p>
+            <p>Track and manage your product inventory</p>
         </div>
     </header>
 
